--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Profeta - Edición Vociferadora</title>
+    <title>El Profeta - Edición de Oro y Galeones</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&family=Special+Elite&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&display=swap');
 
@@ -41,26 +41,23 @@
         }
         @keyframes glow { from { opacity: 0.8; } to { opacity: 1; box-shadow: 0 0 25px var(--oro); } }
 
-        /* --- ARTÍCULOS Y ESTILOS --- */
-        .article { padding: 15px; margin-bottom: 25px; position: relative; border-bottom: 2px solid rgba(0,0,0,0.1); transition: 0.3s; }
+        /* --- ARTÍCULOS --- */
+        .article { padding: 15px; margin-bottom: 25px; position: relative; border-bottom: 2px solid rgba(0,0,0,0.1); }
         .foto-magica { width: 100%; margin: 10px 0; border: 1px solid #000; filter: sepia(0.3) contrast(1.1); box-shadow: 2px 2px 5px rgba(0,0,0,0.3); }
 
         .card-oficial {
             background: #000 url('https://www.transparenttextures.com/patterns/dark-leather.png') !important;
             border: 2px solid var(--oro) !important;
-            box-shadow: 0 5px 20px rgba(212, 175, 55, 0.4);
         }
         .card-oficial h3 { font-family: 'Cinzel'; border-bottom: 1px solid currentColor; margin-top: 0; }
-        .card-oficial p, .card-oficial small { color: #f0f0f0; }
 
         /* --- VOCIFERADORA --- */
         .vociferadora {
             background: linear-gradient(135deg, #8b0000 0%, #ff1a1a 100%) !important;
-            color: white !important; border: none !important;
+            border: none !important;
             animation: shake 0.2s infinite; 
             box-shadow: 0 0 20px var(--sangre);
         }
-        .vociferadora h3, .vociferadora p, .vociferadora small { color: white !important; }
         @keyframes shake { 0% { transform: rotate(0.3deg); } 100% { transform: rotate(-0.3deg); } }
 
         .ranking-box { background: rgba(0,0,0,0.05); border: 1px solid #000; padding: 10px; margin-bottom: 15px; font-family: 'Cinzel'; }
@@ -125,8 +122,8 @@
                     <input type="text" id="g-t" placeholder="Título">
                     <textarea id="g-m" rows="3" placeholder="Contenido..."></textarea>
                     <div style="display:flex; align-items:center; gap:10px; font-family:'Cinzel'; font-size:10px;">
-                        <span>COLOR AURA:</span> <input type="color" id="g-color" value="#0f0f0f" style="width:40px; height:20px;">
-                        <label><input type="checkbox" id="g-voc"> ¿ES VOCIFERADORA? 🔥</label>
+                        <span>COLOR DEL TEXTO:</span> <input type="color" id="g-color" value="#0f0f0f" style="width:40px; height:20px;">
+                        <label><input type="checkbox" id="g-voc"> ¿VOCIFERADORA? 🔥</label>
                     </div>
                 </div>
                 <div id="form-confesion" style="display:none;">
@@ -148,8 +145,8 @@
                 <textarea id="s-m" rows="4" placeholder="Cuerpo de la noticia..."></textarea>
                 <input type="text" id="s-img" placeholder="URL de la Foto">
                 <div style="display:flex; gap:10px; font-family:'Cinzel'; font-size:10px;">
-                    <select id="s-estilo"><option value="normal">Pergamino Negro</option><option value="vociferadora">Vociferadora 🔥</option></select>
-                    <input type="color" id="s-color" value="#d4af37">
+                    <select id="s-estilo"><option value="normal">Cuero Negro</option><option value="vociferadora">Vociferadora 🔥</option></select>
+                    <span>COLOR TEXTO:</span> <input type="color" id="s-color" value="#d4af37">
                 </div>
                 <button class="btn-send" onclick="publicarTodo('STAFF')">PUBLICAR OFICIAL ✨</button>
             </div>
@@ -229,14 +226,31 @@
 
             items.forEach(n => {
                 const voted = n.v && n.v[sesion.n];
-                const clVoc = n.estilo === 'vociferadora' ? 'vociferadora' : '';
+                const isVoc = n.estilo === 'vociferadora';
+                const clVoc = isVoc ? 'vociferadora' : '';
                 const uColor = n.color || "#0f0f0f";
 
                 if(n.tipo === 'STAFF') {
-                    hStaff += `<div class="article card-oficial ${clVoc}" style="border-color:${uColor} !important;"><h3 style="color:${uColor}">${n.titulo}</h3><small>🖋️ REDACCIÓN CENTRAL</small>${n.img ? `<img src="${n.img}" class="foto-magica">` : ""}<p>${n.texto}</p></div>`;
+                    hStaff += `
+                        <div class="article card-oficial ${clVoc}" style="border-color:${uColor} !important; color:${uColor} !important;">
+                            <h3 style="color:${uColor}">${n.titulo}</h3>
+                            <small style="color:${uColor}; opacity:0.8;">🖋️ REDACCIÓN CENTRAL</small>
+                            ${n.img ? `<img src="${n.img}" class="foto-magica">` : ""}
+                            <p style="color:${uColor}">${n.texto}</p>
+                        </div>`;
                 } else if(n.tipo === 'noticia') {
                     scores[n.autor] = (scores[n.autor] || 0) + (n.c || 0);
-                    hAl += `<div class="article ${clVoc}" style="border-left: 5px solid ${uColor};"><h3 style="color:${uColor}">${n.titulo}</h3><small>🖋️ ${n.autor} [${n.casa}]</small><p>${n.texto}</p><div style="text-align:right;"><button class="voto-btn" onclick="votar('${n.id}')" style="color:${uColor}">${voted ? '✉️ SELLADO' : '🔥 GRITAR ('+(n.c||0)+')'}</button></div></div>`;
+                    hAl += `
+                        <div class="article ${clVoc}" style="border-left: 5px solid ${uColor}; color:${uColor} !important;">
+                            <h3 style="color:${uColor}">${n.titulo}</h3>
+                            <small style="color:${uColor}; opacity:0.8;">🖋️ ${n.autor} [${n.casa}]</small>
+                            <p style="color:${uColor}">${n.texto}</p>
+                            <div style="text-align:right;">
+                                <button class="voto-btn" onclick="votar('${n.id}')" style="color:${uColor}; border-color:${uColor}">
+                                    ${voted ? '✉️ SELLADO' : '🔥 GRITAR ('+(n.c||0)+')'}
+                                </button>
+                            </div>
+                        </div>`;
                 } else {
                     hConf += `<div class="confesion-card"><b>🤫 SECRETO:</b><br>"${n.texto}"<br><small>— ${n.anonimo?'Anónimo':n.autor}</small></div>`;
                 }
